[package]
authors = ["Lim Mingjie, Kenneth <me@kenlimmj.com>"]
edition = "2018"
name = "yggdrasil"
publish = false
version = "0.1.0"

[dependencies]
chrono = "0.4.7"
clap = "2.33.0"
console = "0.7.7"
derive_builder = "0.7.2"
dialoguer = "0.4.0"
lazy_static = "1.3.0"
maplit = "1.0.1"
multimap = "0.5.0"
rust_decimal = "1.0.1"
strum = "0.15.0"
strum_macros = "0.15.0"
